--- a/p/themes/base-theme/frss.rtl.css
+++ b/p/themes/base-theme/frss.rtl.css
@@ -640,6 +640,7 @@ input[type="checkbox"]:focus-visible {
 	display: block;
 }
 
+.nav-list .nav-header,
 .nav-list .item,
 .nav-list .item > a,
 .nav-list .item > span {
