--- a/p/themes/Origine/origine.css
+++ b/p/themes/Origine/origine.css
@@ -603,6 +603,20 @@ a:hover .icon {
 	font-size: 1rem;
 }
 
+.aside_feed .tree-folder-title button.dropdown-toggle {
+	margin: -0.75rem 0.25rem -0.75rem -0.75rem;
+	padding: 0.75rem 0 0.75rem 0.75rem;
+}
+
+.aside_feed .tree-folder-title:hover button.dropdown-toggle .icon {
+	filter: none;
+}
+
+.aside_feed .tree-folder-title button.dropdown-toggle:hover .icon {
+	filter: brightness(1.5);
+	transition: 0.1s linear;
+}
+
 .tree-folder-title .title {
 	background: inherit;
 	color: var(--font-color);
