feed title: CSS

--- a/p/themes/base-theme/frss.rtl.css
+++ b/p/themes/base-theme/frss.rtl.css
@@ -1163,22 +1163,18 @@ input[type="search"] {
 }
 
 .aside_feed .tree-folder-title button.dropdown-toggle {
+	padding: 0;
 	border: 0;
 	background-color: inherit;
-	padding: 0;
 	cursor: pointer;
-}
-
-.aside_feed .tree-folder-items .feed .dropdown-toggle {
-	margin: 0 0 0 0.5rem;
 }
 
 .aside_feed .tree-folder-title .icon {
 	margin: 0 0 0 0.25rem;
 }
 
-.aside_feed .tree-folder-items .item.feed {
-	padding: var(--frss-padding-top-bottom) 0.75rem;
+.aside_feed .tree-folder-items .feed .favicon {
+	padding: 0;
 }
 
 .aside_feed .tree-folder-items:not(.active) {
@@ -1189,12 +1185,20 @@ input[type="search"] {
 	overflow: hidden;
 }
 
-.aside_feed .tree-folder-items .dropdown {
-	vertical-align: top;
-}
-
 .aside_feed .tree-folder-items .dropdown-menu {
 	right: 0;
+	margin-right: 0.75rem
+}
+
+.aside_feed .tree-folder-items .dropdown {
+	vertical-align: baseline;
+	margin-left: 0.25rem;
+}
+
+.aside_feed .tree-folder-items .dropdown .dropdown-toggle {
+	padding: var(--frss-padding-top-bottom) 0.75rem var(--frss-padding-top-bottom) 0.25rem;
+	display: inline-block;
+	text-align: left;
 }
 
 .aside_feed .tree-folder-items .item .dropdown-toggle > .icon {
@@ -2048,9 +2052,13 @@ html.slider-active {
 	text-decoration: underline double;
 }
 
+.aside .feed .item-title {
+	padding: var(--frss-padding-top-bottom) 0 var(--frss-padding-top-bottom) 3.5rem;
+}
+
 .aside .category .title:not([data-unread="0"])::after,
 .aside .feed .item-title:not([data-unread="0"])::after {
-	margin: calc(0.125rem + var(--frss-padding-top-bottom)) 0 0 0;
+	margin: var(--frss-padding-top-bottom) 0 0 0;
 	padding: 0.25rem 0.5rem;
 	min-width: 2rem;
 	display: block;
@@ -2063,6 +2071,10 @@ html.slider-active {
 	border-radius: 0.75rem;
 	line-height: 1;
 	font-weight: initial;
+}
+
+.aside .category .title:not([data-unread="0"])::after {
+	margin: calc(0.125rem + var(--frss-padding-top-bottom)) 0 0 0;
 }
 
 .global .box.category .title:not([data-unread="0"])::after {
@@ -2129,7 +2141,7 @@ html.slider-active {
 
 .feed .item-title:not([data-unread="0"]) {
 	font-weight: bold;
-	width: calc(100% - 5.5rem);
+	width: calc(100% - 6rem);
 }
 
 .state_unread .category:not(.active)[data-unread="0"],
@@ -2254,6 +2266,14 @@ html.slider-active {
 		width: 100%;
 		border-bottom: 1px solid var(--frss-border-color);
 		text-align: center;
+	}
+
+	.aside .feed .item-title {
+		padding-right: 0.75rem;
+		padding-left: 4rem;
+		display: block;
+		width: 100%;
+		box-sizing: border-box;
 	}
 
 	.flux .flux_header .item .title:has(~.date) {
