--- a/app/layout/aside_feed.phtml
+++ b/app/layout/aside_feed.phtml
@@ -134,8 +134,8 @@
 		data-unread="<?= format_number($feed->nbNotRead()) ?>" href="<?=
 		_url('index', $actual_view, 'get', 'f_' . $feed->id()) . $state_filter_manual ?>">
 		<?php
-		if ($show_favicon || $f_active) { ?><img class="favicon" src="<?= $feed->favicon() ?>" alt="✇" loading="lazy" /><?php } ?>
-		<?= $feed->name() ?></a></li>
+		if ($show_favicon || $f_active) { ?><img class="favicon" src="<?= $feed->favicon() ?>" alt="✇" loading="lazy" /><?php }
+		?><span class="title"><?= $feed->name() ?></span></a></li>
 <?php
 	endforeach;
 ?>
