--- a/app/layout/aside_feed.phtml
+++ b/app/layout/aside_feed.phtml
@@ -124,13 +124,18 @@
 		}
 		$mute_class = $feed->mute() ? ' mute' : '';
 ?>
-<li id="f_<?= $feed->id() ?>" class="item feed<?= $f_active_class, $mute_class, $error_class, $empty_class ?>" title="<?= $error_title, $empty_title ?>"
+<li id="f_<?= $feed->id() ?>" class="item feed<?= $f_active_class, $mute_class, $error_class, $empty_class ?>"
 		data-unread="<?= $feed->nbNotRead() ?>" data-priority="<?= $feed->priority() ?>"><?php
 		if ($f_active || $nbFeedsTotal < FreshRSS_Context::userConf()->simplify_over_n_feeds):
 			?><div class="dropdown no-mobile">
 				<div id="dropdown-<?= $feed->id() ?>" class="dropdown-target"></div><a href="#dropdown-<?= $feed->id() ?>" class="dropdown-toggle" title="TODO Open menu" data-fweb="<?= $feed->website() ?>"><?= _i('configure') ?></a><?php /* feed_config_template */ ?>
 			</div><?php
-		endif;?><a class="item-title" title="TODO Open feed: <?= $feed->name() ?>"
+		endif;
+		$title = 'TODO Open feed: ' . $feed->name();
+		$title .= $error_title ? '&#13;⚠ ' . $error_title : '';
+		$title .= $empty_title ? '&#13;' . $empty_title : '';
+		$title .= $feed->mute() ? '&#13;🔇 TODO This feed is muted' : '';
+		?><a class="item-title" title="<?= $title ?>"
 		data-unread="<?= format_number($feed->nbNotRead()) ?>" href="<?=
 		_url('index', $actual_view, 'get', 'f_' . $feed->id()) . $state_filter_manual ?>">
 		<?php
