--- a/p/themes/base-theme/frss.css
+++ b/p/themes/base-theme/frss.css
@@ -641,6 +641,10 @@ input[type="checkbox"]:focus-visible {
 	text-overflow: ellipsis;
 }
 
+.nav-list .item.nav-section > ul {
+	margin-bottom: 1rem;
+}
+
 /*=== Horizontal-list */
 .horizontal-list {
 	margin: 0;
