--- a/app/views/update/apply.phtml
+++ b/app/views/update/apply.phtml
@@ -11,7 +11,7 @@
 	<h1><?= _t('admin.update') ?></h1>
 
 	<?php
-		/** @phpstan-ignore function.notFound */
+		// @phpstan-ignore function.notFound
 		ask_info_update();
 	?>
 </main>
