--- a/app/views/helpers/category/update.phtml
+++ b/app/views/helpers/category/update.phtml
@@ -251,7 +251,7 @@
 			<div class="form-group">
 				<label class="group-name"><?= _t('sub.feed.export-as-opml.label') ?></label>
 				<div class="group-controls">
-					<a class="btn btn-important" href="<?= _url('index', 'opml', 'get', 'c_'.$this->category->id()) ?>" download="<?= 'f_'.$this->category->id()?> <?= $this->category->name() ?>.opml.xml">
+					<a class="btn btn-important" href="<?= _url('index', 'opml', 'get', 'c_'.$this->category->id()) ?>" download="f_<?= $this->category->id() ?> <?= $this->category->name() ?>.opml.xml">
 						<?= _t('sub.feed.export-as-opml.download') ?>
 					</a>
 					<p class="help"><?= _i('help') ?> <?= _t('sub.feed.export-as-opml.help') ?></p>
