--- a/app/views/index/rss.phtml
+++ b/app/views/index/rss.phtml
@@ -9,7 +9,7 @@
 	<channel>
 		<title><?= $this->rss_title ?></title>
 		<link><?= $this->html_url ?></link>
-		<description><?= _t('index.feed.rss_of', $this->rss_title) ?></description>
+		<description><?= $this->description ?></description>
 		<pubDate><?= date('D, d M Y H:i:s O') ?></pubDate>
 		<lastBuildDate><?= gmdate('D, d M Y H:i:s') ?> GMT</lastBuildDate>
 		<atom:link href="<?= $this->rss_url ?>" rel="self" type="application/rss+xml" />
