add image url to user queries and rss feed

--- a/app/views/helpers/configure/query.phtml
+++ b/app/views/helpers/configure/query.phtml
@@ -24,6 +24,10 @@
 			<div class="group-controls">
 				<input type="text" class="w100" name="query[description]" id="description" value="<?= $this->query->getDescription() ?>" />
 			</div>
+			<label class="group-name" for="imageUrl"><?= _t('conf.query.image_url') ?></label>
+			<div class="group-controls">
+				<input type="text" class="w100" name="query[imageUrl]" id="imageUrl" value="<?= $this->query->getImageUrl() ?>" />
+			</div>
 		</div>
 
 		<fieldset>
