--- a/app/views/helpers/index/normal/entry_bottom.phtml
+++ b/app/views/helpers/index/normal/entry_bottom.phtml
@@ -12,9 +12,9 @@
 	if (FreshRSS_Auth::hasAccess()) {
 		if ($bottomline_read) {
 			?><li class="item manage"><?php
-				$arUrl = array('c' => 'entry', 'a' => 'read', 'params' => array('id' => $this->entry->id()));
+				$arUrl = ['c' => 'entry', 'a' => 'read', 'params' => ['id' => $this->entry->id()]];
 				if ($this->entry->isRead()) {
-					$arUrl['params']['is_read'] = 0;
+					$arUrl['params']['is_read'] = '0';
 				}
 				?><a class="item-element read" href="<?= Minz_Url::display($arUrl) ?>" title="<?= _t('conf.shortcut.mark_read') ?>"><?php
 					echo _i($this->entry->isRead() ? 'read' : 'unread'); ?></a><?php
@@ -22,9 +22,9 @@
 		}
 		if ($bottomline_favorite) {
 			?><li class="item manage"><?php
-				$arUrl = array('c' => 'entry', 'a' => 'bookmark', 'params' => array('id' => $this->entry->id()));
+				$arUrl = ['c' => 'entry', 'a' => 'bookmark', 'params' => ['id' => $this->entry->id()]];
 				if ($this->entry->isFavorite()) {
-					$arUrl['params']['is_favorite'] = 0;
+					$arUrl['params']['is_favorite'] = '0';
 				}
 				?><a class="item-element bookmark" href="<?= Minz_Url::display($arUrl) ?>" title="<?= _t('conf.shortcut.mark_favorite') ?>"><?php
 					echo _i($this->entry->isFavorite() ? 'starred' : 'non-starred'); ?></a><?php
