--- a/app/views/index/rss.phtml
+++ b/app/views/index/rss.phtml
@@ -9,15 +9,17 @@
 	<channel>
 		<title><?= $this->rss_title ?></title>
 		<link><?= $this->html_url ?></link>
-		<description><?= $this->description ?></description>
+		<description><?= $this->description ?: _t('index.feed.rss_of', $this->rss_title) ?></description>
 		<pubDate><?= date('D, d M Y H:i:s O') ?></pubDate>
 		<lastBuildDate><?= gmdate('D, d M Y H:i:s') ?> GMT</lastBuildDate>
 		<atom:link href="<?= $this->rss_url ?>" rel="self" type="application/rss+xml" />
+		<?php if ($this->image_url !== ''): ?>
 		<image>
 			<url><?= $this->image_url ?></url>
 			<title><?= $this->rss_title ?></title>
 			<link><?= $this->html_url ?></link>
 		</image>
+		<?php endif; ?>
 <?php
 foreach ($this->entries as $item) {
 	if (!$this->internal_rendering) {
