--- a/app/views/configure/reading.phtml
+++ b/app/views/configure/reading.phtml
@@ -137,11 +137,11 @@
 				</div>
 			</div>
 			<div class="form-group">
-				<label class="group-name" for="show_articleicons"><?= _t('conf.reading.article.icons') ?></label>
+				<label class="group-name" for="show_article_icons"><?= _t('conf.reading.article.icons') ?></label>
 				<div class="group-controls">
-					<select name="show_articleicons" id="show_articleicons" data-leave-validation="<?= FreshRSS_Context::userConf()->show_articleicons ?>">
-						<option value="t" <?= FreshRSS_Context::userConf()->show_articleicons === 't' ? ' selected="selected"' : '' ?> data-input-visible="true"><?= _t('conf.reading.article.icons.above_title') ?></option>	
-						<option value="a" <?= FreshRSS_Context::userConf()->show_articleicons === 'a' ? ' selected="selected"' : '' ?> data-input-visible="true"><?= _t('conf.reading.article.icons.with_authors') ?></option>
+					<select name="show_article_icons" id="show_article_icons" data-leave-validation="<?= FreshRSS_Context::userConf()->show_article_icons ?>">
+						<option value="t" <?= FreshRSS_Context::userConf()->show_article_icons === 't' ? ' selected="selected"' : '' ?> data-input-visible="true"><?= _t('conf.reading.article.icons.above_title') ?></option>	
+						<option value="a" <?= FreshRSS_Context::userConf()->show_article_icons === 'a' ? ' selected="selected"' : '' ?> data-input-visible="true"><?= _t('conf.reading.article.icons.with_authors') ?></option>
 					</select>
 				</div>
 			</div>
