--- a/app/views/helpers/index/article.phtml
+++ b/app/views/helpers/index/article.phtml
@@ -20,12 +20,12 @@
 		?>
 		<div class="article-header-topline horizontal-list">
 			<?php if (FreshRSS_Auth::hasAccess()) { ?>
-				<?php if (FreshRSS_Context::userConf()->topline_read && FreshRSS_Context::userConf()->show_articleicons == 't') { ?>
+				<?php if (FreshRSS_Context::userConf()->topline_read && FreshRSS_Context::userConf()->show_article_icons == 't') { ?>
 					<div class="item manage">
 						<a class="read" href="<?= Minz_Url::display($readUrl) ?>" title="<?= _t('conf.shortcut.mark_read') ?>"><?= _i($entry->isRead() ? 'read' : 'unread') ?></a>
 					</div>
 				<?php } ?>
-				<?php if (FreshRSS_Context::userConf()->topline_favorite && FreshRSS_Context::userConf()->show_articleicons == 't') { ?>
+				<?php if (FreshRSS_Context::userConf()->topline_favorite && FreshRSS_Context::userConf()->show_article_icons == 't') { ?>
 					<div class="item manage">
 						<a class="bookmark" href="<?= Minz_Url::display($favoriteUrl) ?>" title="<?= _t('conf.shortcut.mark_favorite') ?>"><?= _i($entry->isFavorite() ? 'starred' : 'non-starred') ?></a>
 					</div>
@@ -40,7 +40,7 @@
 				<?php } ?>
 			</div>
 			<?php
-			if (FreshRSS_Context::userConf()->topline_link && FreshRSS_Context::userConf()->show_articleicons == 't') { ?>
+			if (FreshRSS_Context::userConf()->topline_link && FreshRSS_Context::userConf()->show_article_icons == 't') { ?>
 				<div class="item link">
 					<a target="_blank" rel="noreferrer" href="<?= $this->entry->link() ?>" class="item-element" title="<?= _t('conf.shortcut.see_on_website') ?>"><?= _i('link') ?></a>
 				</div>
@@ -56,12 +56,12 @@
 		<?php if (in_array(FreshRSS_Context::userConf()->show_author_date, ['h','b'], true)) { ?>
 			<div class="subtitle horizontal-list">
 				<?php if (FreshRSS_Auth::hasAccess()) { ?>
-					<?php if (FreshRSS_Context::userConf()->topline_read && FreshRSS_Context::userConf()->show_articleicons == 'a') { ?>
+					<?php if (FreshRSS_Context::userConf()->topline_read && FreshRSS_Context::userConf()->show_article_icons == 'a') { ?>
 						<div class="item manage">
 							<a class="read" href="<?= Minz_Url::display($readUrl) ?>" title="<?= _t('conf.shortcut.mark_read') ?>"><?= _i($entry->isRead() ? 'read' : 'unread') ?></a>
 						</div>
 					<?php } ?>
-					<?php if (FreshRSS_Context::userConf()->topline_favorite && FreshRSS_Context::userConf()->show_articleicons == 'a') { ?>
+					<?php if (FreshRSS_Context::userConf()->topline_favorite && FreshRSS_Context::userConf()->show_article_icons == 'a') { ?>
 						<div class="item manage">
 							<a class="bookmark" href="<?= Minz_Url::display($favoriteUrl) ?>" title="<?= _t('conf.shortcut.mark_favorite') ?>"><?= _i($entry->isFavorite() ? 'starred' : 'non-starred') ?></a>
 						</div>
@@ -91,7 +91,7 @@
 					<time datetime="<?= $entry->machineReadableDate() ?>"><?= $entry->date() ?></time>
 				</div>
 				<?php
-				if (FreshRSS_Context::userConf()->topline_link && FreshRSS_Context::userConf()->show_articleicons == 'a') { ?>
+				if (FreshRSS_Context::userConf()->topline_link && FreshRSS_Context::userConf()->show_article_icons == 'a') { ?>
 					<div class="item link">
 						<a target="_blank" rel="noreferrer" href="<?= $this->entry->link() ?>" class="item-element" title="<?= _t('conf.shortcut.see_on_website') ?>"><?= _i('link') ?></a>
 					</div>
