--- a/app/layout/layout.phtml
+++ b/app/layout/layout.phtml
@@ -9,10 +9,7 @@
 		$class = 'rtl ';
 	}
 	if (FreshRSS_Context::userConf()->darkMode !== 'no') {
-		$class .= 'darkMode_' . FreshRSS_Context::userConf()->darkMode.' ';
-	}
-	if (FreshRSS_Context::userConf()->stickyButtons) {
-		$class .= 'stickyButtons';
+		$class .= 'darkMode_' . FreshRSS_Context::userConf()->darkMode;
 	}
 ?>
 <!DOCTYPE html>
