--- a/p/themes/Flat/flat.css
+++ b/p/themes/Flat/flat.css
@@ -112,7 +112,7 @@ th {
 .form-group.form-actions {
 	margin: 15px 0 25px;
 	padding: 5px 0;
-	background: #ecf0f1;
+	background-color: #e6ecedaa;
 	border-top: 3px solid #bdc3c7;
 	border-radius: 5px 5px 0 0;
 }
