--- a/p/themes/Origine/origine.rtl.css
+++ b/p/themes/Origine/origine.rtl.css
@@ -1152,6 +1152,11 @@ a:hover .icon {
 		margin-bottom: 3rem;
 	}
 
+	#nav_menu_read_all .btn {
+		border-right: 1px solid var(--border-color-shadow-side);
+		border-radius: 3px;
+	}
+
 	#overlay {
 		background-color: var(--background-color-light);
 	}
