--- a/p/themes/Origine/origine.css
+++ b/p/themes/Origine/origine.css
@@ -497,6 +497,10 @@ a:hover .icon {
 	color: var(--font-color-light);
 }
 
+.dropdown-open-right-to-top .dropdown-menu:has(> .item:last-child .item:last-child a:hover)::after {
+	background-color: var(--contrast-background-color-active);
+}
+
 .dropdown-menu .item > label {
 	padding: 0;
 }
