--- a/app/views/configure/display.phtml
+++ b/app/views/configure/display.phtml
@@ -279,10 +279,10 @@
 
 		<div class="form-group">
 			<div class="group-controls">
-				<label class="checkbox" for="show_nav_buttons">
-					<input type="checkbox" name="show_nav_buttons" id="show_nav_buttons" value="1"<?=
-						FreshRSS_Context::userConf()->show_nav_buttons ? ' checked="checked"' : '' ?>
-						data-leave-validation="<?= FreshRSS_Context::userConf()->show_nav_buttons ?>" />
+				<label class="checkbox" for="show_add_feed_category_button">
+					<input type="checkbox" name="show_add_feed_category_button" id="show_add_feed_category_button" value="1"<?=
+						FreshRSS_Context::userConf()->show_add_feed_category_button ? ' checked="checked"' : '' ?>
+						data-leave-validation="<?= FreshRSS_Context::userConf()->show_add_feed_category_button ?>" />
 					<?= _t('conf.display.view_bar.show_add_feed_category_button') ?>
 				</label>
 			</div>
@@ -290,10 +290,10 @@
 
 		<div class="form-group">
 			<div class="group-controls">
-				<label class="checkbox" for="show_nav_buttons">
-					<input type="checkbox" name="show_nav_buttons" id="show_nav_buttons" value="1"<?=
-						FreshRSS_Context::userConf()->show_nav_buttons ? ' checked="checked"' : '' ?>
-						data-leave-validation="<?= FreshRSS_Context::userConf()->show_nav_buttons ?>" />
+				<label class="checkbox" for="show_help_button">
+					<input type="checkbox" name="show_help_button" id="show_help_button" value="1"<?=
+						FreshRSS_Context::userConf()->show_help_button ? ' checked="checked"' : '' ?>
+						data-leave-validation="<?= FreshRSS_Context::userConf()->show_help_button ?>" />
 					<?= _t('conf.display.view_bar.show_help_button') ?>
 				</label>
 			</div>
