--- a/app/layout/nav_menu.phtml
+++ b/app/layout/nav_menu.phtml
@@ -1,5 +1,6 @@
 <?php
 	declare(strict_types=1);
+	/** @var FreshRSS_View $this */
 ?>
 <nav class="nav_menu">
 	<?php if (FreshRSS_Auth::hasAccess()) { ?>
